--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "miaoda-react-admin",
-  "version": "0.0.1",
+  "name": "apex-insights",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "echo 'Do not use this command, only use lint to check'",
